<resources>
  <string name="app_name">My App Portfolio</string>
  <string name="action_settings">Settings</string>

  <!-- MainActivityFragment -->
  <string name="fragment_main_title">My Nanodegree Apps!</string>
  <string name="app_name_spotify">Spotify Streamer</string>
  <string name="app_name_scores">Scores App</string>
  <string name="app_name_library">Library App</string>
  <string name="app_name_build_it">Build It Bigger</string>
  <string name="app_name_xyz">XYZ Reader</string>
  <string name="app_name_capstone">Capstone: My Own App</string>

  <string name="toast_spotify">This button will launch my Spotify Streamer App!</string>
  <string name="toast_scores">This button will launch my Scores App!</string>
  <string name="toast_library">This button will launch my Library App!</string>
  <string name="toast_build_it">This button will launch my Build It Bigger App!</string>
  <string name="toast_xyz">This button will launch my XYZ Reader App!</string>
  <string name="toast_capstone">This button will launch my Capstone App!</string>
</resources>
