<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/project_zero_horizontal_margin"
                android:paddingRight="@dimen/project_zero_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivityFragment"
              android:background="@color/project_zero_background">

  <TextView
    android:text="@string/fragment_main_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="@dimen/abc_text_size_large_material"
    android:layout_marginBottom="16dp"
    android:textColor="#00134d"/>

  <Button
    android:text="@string/app_name_spotify"
    android:id="@+id/button_spotify"
    style="@style/ProjectZeroButtonStyle"/>

  <Button
    android:text="@string/app_name_scores"
    android:id="@+id/button_scores"
    style="@style/ProjectZeroButtonStyle"/>

  <Button
    android:text="@string/app_name_library"
    android:id="@+id/button_library"
    style="@style/ProjectZeroButtonStyle"/>

  <Button
    android:text="@string/app_name_build_it"
    android:id="@+id/button_build_it"
    style="@style/ProjectZeroButtonStyle"/>

  <Button
    android:text="@string/app_name_xyz"
    android:id="@+id/button_xyz"
    style="@style/ProjectZeroButtonStyle"/>

  <Button
    android:text="@string/app_name_capstone"
    android:id="@+id/button_capstone"
    style="@style/ProjectZeroButtonStyle.Highlight"/>


</LinearLayout>
